_sass/pages/_installation.scss
// Shared across all buttons
.box-img {
	margin: auto;
    border-radius: 10px;
	background: $download;
}

.select-spacing{
	margin-top: 20px;
}

// For the selections
.pick-box {
	display:none;
	width: 40em;
	top: 11em;
	position: relative;

	&:hover {
		transition: 0.5s;
		background: $download-alt;
	}
	&:not(:hover){
		transition: 0.5s
	}
}

// For the install buttons
.install-box {
	display:none;
	top: 1rem;
	width: 40rem;
	position: relative;

	&:hover {
		transition: 0.5s;
		background: $download-alt;

		
	}
	&:not(:hover){
		transition: 0.5s
	}
}
#all_versions{
	position: relative;
	top:-3em;
}
// Just back button.
.back-button {
	display:none;
	background: $download;
	position: relative;
	width: 18rem;
	top: -11.2%;
	right: 38%;
	z-index: 1;
	&:hover {
		transition: 0.5s;
		background: $download-alt;
	}
	&:not(:hover){
		transition: 0.5s
	}
}

#choose-game-area {
	height: 52em;
}

#files {
	margin: auto;
	width: 700px;
}

@media screen and (max-width: 830px){
	.back-button{
		top: 80%;
		right: 0;
	}
	.box__heading{
		font-size: 4rem;
	}
	.install-box{
		width: 30rem;
	}
	.pick-box {
		width: 30rem;
	}
	#choose-game-area {
		height: 80em;
	}	
}

